--- a/package.json
+++ b/package.json
@@ -9,26 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@portabletext/react": "^6.0.2",
-    "@sanity/icons": "^3.7.4",
-    "@sanity/image-url": "^2.0.3",
-    "@sanity/ui": "^3.1.11",
-    "@sanity/vision": "^5.9.0",
     "@tailwindcss/typography": "^0.5.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "groq": "^5.9.0",
     "i18next": "^25.8.7",
     "i18next-browser-languagedetector": "^8.2.1",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
-    "next-sanity": "^12.1.0",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-i18next": "^16.5.4",
-    "sanity": "^5.9.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
